src/styles.scss
/* http://www.eaglefonts.com/fg-virgil-ttf-131249.htm */
@font-face {
  font-family: "Virgil";
  src: url("https://uploads.codesandbox.io/uploads/user/ed077012-e728-4a42-8395-cbd299149d62/AflB-FG_Virgil.ttf");
  font-display: swap;
}

body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
}

.container {
  display: flex;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.sidePanel {
  width: 230px;
  background-color: #eee;
  padding: 10px;
  overflow-y: auto;
  position: relative;

  h4 {
    margin: 10px 0 10px 0;
  }

  .panel {
    position: relative;
    .btn-panel-collapse {
      position: absolute;
      top: -2px;
      right: 5px;
      background: none;
      margin: 0px;
      color: black;
    }

    .btn-panel-collapse-icon {
      transform: none;
      display: inline-block;
    }

    .btn-panel-collapse-icon-closed {
      transform: rotateZ(90deg);
    }
  }

  .panelTools {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;

    label {
      margin: 2px 0;
    }

    // https://stackoverflow.com/a/34816625/4653792
    &::after {
      content: "";
      width: 128px;
    }
  }

  .panelColumn {
    display: flex;
    flex-direction: column;

    h5 {
      margin-top: 4px;
      margin-bottom: 4px;
      font-size: 12px;
      color: #333;
    }

    h5:first-child {
      margin-top: 0;
    }

    .buttonList {
      flex-wrap: wrap;

      button {
        margin-right: 4px;
      }
    }
  }
}

.tool {
  position: relative;

  input[type="radio"] {
    position: absolute;
    opacity: 0;
    width: 0;
    height: 0;
  }

  input[type="radio"] {
    & + .toolIcon {
      background-color: #ddd;

      width: 41px;
      height: 41px;

      display: flex;
      justify-content: center;
      align-items: center;

      border-radius: 3px;

      svg {
        height: 1em;
      }
    }
    &:hover + .toolIcon {
      background-color: #e7e5e5;
    }
    &:checked + .toolIcon {
      background-color: #bdbebc;
    }
    &:focus + .toolIcon {
      box-shadow: 0 0 0 2px steelblue;
    }
  }
}

label {
  margin-right: 6px;
  span {
    display: inline-block;
  }
}

input[type="number"] {
  width: 30px;
}

input[type="color"] {
  margin: 2px;
}

input[type="range"] {
  width: 230px;
}

input {
  margin-right: 5px;

  &:focus {
    outline: transparent;
    box-shadow: 0 0 0 2px steelblue;
  }
}

button {
  background-color: #ddd;
  border: 1px solid #ccc;
  border-radius: 4px;
  margin: 2px 0;
  padding: 5px;
  outline: transparent;

  &:focus {
    box-shadow: 0 0 0 2px steelblue;
  }

  &:hover {
    background-color: #e7e5e5;
    border-color: #d6d4d4;
  }

  &:active,
  &.active {
    background-color: #bdbebc;
    border-color: #bdbebc;
  }

  &:disabled {
    cursor: not-allowed;
  }
}

.popover {
  position: absolute;
  z-index: 2;

  .cover {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }
}

.swatch {
  height: 24px;
  width: 24px;
  display: inline;
  margin-right: 4px;
}

.swatch-input {
  font-size: 16px;
  display: inline;
  width: 100px;
  border-radius: 2px;
  padding: 2px 4px;
  border: 1px solid #ddd;
}
.project-name {
  font-size: 14px;
  cursor: pointer;
}

.project-name-input {
  width: 200px;
  font: inherit;
}

